# Clebsch-Gordan-Coefficients-Calculator

./: CMakeLists.txt  README.md  main.cpp
include/: CGcalc.h
src/: CGcalc.cpp  CGcalc.h
